--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "food_app",
+  "name": "pizz_app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.3",
+    "@iconscout/react-unicons": "^1.1.6",
+    "@mantine/core": "^4.2.12",
+    "@mantine/hooks": "^4.2.12",
+    "@sanity/client": "^3.3.2",
+    "@sanity/image-url": "^1.0.1",
+    "@stripe/stripe-js": "^1.32.0",
+    "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.2.0",
+    "stripe": "^9.12.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3"
+    "eslint": "8.19.0",
+    "eslint-config-next": "12.2.0"
   }
 }
